--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -29,11 +29,11 @@ header{
 .page-head{
   $image-gradient-color-top: teal;
   $transparency-top: .6;
-  $image-gradient-color-bottom: green;
+  $image-gradient-color-bottom: purple;
   $transparency-bottom: .6;
   $vertical-angle: 180deg;
 
-  $image-gradient-color-left: red;
+  $image-gradient-color-left: purple;
   $transparency-left: .9;
   $image-gradient-color-right: yellow;
   $transparency-right: .8;
